[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "schema-org"
version = "0.1.0"
description = "Schema.org schemas as pydantic models"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev-dependencies.dependencies]
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.isort]
profile = "black"
